custom/app/src/objects/LMS_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Activity_value__c</fullName>
        <label>How valuable was this activity?</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confidence_customizing__c</fullName>
        <label>Confidence in customizing this content?</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LMS Feedbacks</relationshipLabel>
        <relationshipName>LMS_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Comments__c</fullName>
        <label>Participant Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Material_value__c</fullName>
        <label>How valuable were the support materials?</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Preparing__c</fullName>
        <label>Time Spent Preparing for Badge (hrs)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Plan</label>
        <referenceTo>Training_Plan__c</referenceTo>
        <relationshipLabel>LMS Feedbacks</relationshipLabel>
        <relationshipName>LMS_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LMS_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LMS Feedback</label>
    <nameField>
        <displayFormat>F-{000000000}</displayFormat>
        <label>LMS Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMS Feedbacks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>